# wikidata-query-logs

./: CHANGELOG.md  Makefile  OVERLAP.md  README.md  VALIDITY_RULES.md  build_clusters.py  check_overlap.py  dataset_creation_statistics.py  export_dataset.py  export_kgqa_dataset.py  generate_dataset.py  generate_embeddings.py  prepare.py  prepare_input.py  pyproject.toml  requirements.txt  sparql_statistics.py  test_sparql_statistics.py  utils.py  visualize_app.py
