[project]
name = "wikidata-query-logs-kgqa"
version = "0.1.0"
description = "SPARQL-based knowledge graph question answering dataset over Wikidata"
requires-python = ">=3.12"
dependencies = [
  "sentence-transformers>=2.2.0",
  "numpy>=1.21.0",
  "tqdm>=4.62.0",
  "hdbscan>=0.8.29",
  "umap-learn>=0.5.3",
  "streamlit>=1.28.0",
  "plotly>=5.14.0",
  "pandas>=1.3.0",
]

[tool.pyright]
# Python version
pythonVersion = "3.12"

# Include/exclude patterns
include = ["*.py"]
exclude = ["**/__pycache__", "**/.venv", "**/venv"]

# Type checking mode
typeCheckingMode = "basic" # Options: "off", "basic", "standard", "strict"

# Report missing imports as warnings instead of errors
reportMissingImports = "warning"

# Don't report missing type stubs (we can't control third-party libraries)
reportMissingTypeStubs = false

# Be lenient about unknown types from libraries without stubs
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false

# Report actual issues
reportGeneralTypeIssues = true
reportOptionalMemberAccess = true
reportOptionalSubscript = true
reportOptionalCall = true

[tool.ruff]
# Line length
line-length = 88

# Python version
target-version = "py312"

[tool.ruff.lint]
# Enable specific rule sets
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "W",  # pycodestyle warnings
  "B",  # flake8-bugbear
  "I",  # isort
  "N",  # pep8-naming
  "UP", # pyupgrade
]

# Ignore specific rules
ignore = [
  "E501", # Line too long (handled by formatter)
]

[tool.ruff.format]
# Use double quotes
quote-style = "double"

# Indent with spaces
indent-style = "space"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
